--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -590,7 +590,7 @@
 	background: #fff;
 	width: 220px;
 	position: absolute;
-	left: 238px;
+	left: 199px;
 	top: 0;
 	z-index: 999999;
 	opacity: 0;
@@ -622,7 +622,7 @@
 	display: inline-block;
 	height: auto;
 	position: absolute;
-	left: 238px;
+	left: 199px;
 	top: 0;
 	z-index: 99999;
 	background: #fff;
@@ -4946,12 +4946,12 @@ Version:1.0
 					<div class="col-lg-8 col-md-7 col-12">
 						<div class="search-bar-top">
 							<div class="search-bar">
-								<select>
+								<select style="display: none;">
 									<option selected="selected">All Category</option>
 									<option>watch</option>
 									<option>mobile</option>
 									<option>kid’s item</option>
-								</select>
+								</select><div class="nice-select" tabindex="0"><span class="current">All Category</span><ul class="list"><li data-value="All Category" class="option selected">All Category</li><li data-value="watch" class="option">watch</li><li data-value="mobile" class="option">mobile</li><li data-value="kid’s item" class="option">kid’s item</li></ul></div>
 								<form>
 									<input name="search" placeholder="Search Products Here....." type="search">
 									<button class="btnn"><i class="fa fa-phone"></i></button>
@@ -5085,23 +5085,102 @@ Version:1.0
 									<div class="navbar-collapse">	
 										<div class="nav-inner">	
 											<ul class="nav main-menu menu navbar-nav" style="">
-													<li ><a href="#">CATEGORIES</a></li>
-													<li class="active"><a href="#">Home</a></li>
-													<li><a href="#">Product</a></li>												
-													<li><a href="#">Service</a></li>
-													<li><a href="#">Shop<i class="fa fa-shopping-cart"></i><span class="new">New</span></a>
+													<li><a href="#">Categorias</a>
+														<ul class="dropdown">
+															<li><a href="cart.html">Categoria 1</a></li>
+                                                                                                                        <ul class="main-category">
+                                                                                                                            <li><a href="#">New Arrivals <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+                                                                                                                                    <ul class="sub-category">
+                                                                                                                                            <li><a href="#">accessories</a></li>
+                                                                                                                                            <li><a href="#">best selling</a></li>
+                                                                                                                                            <li><a href="#">top 100 offer</a></li>
+                                                                                                                                            <li><a href="#">sunglass</a></li>
+                                                                                                                                            <li><a href="#">watch</a></li>
+                                                                                                                                            <li><a href="#">man’s product</a></li>
+                                                                                                                                            <li><a href="#">ladies</a></li>
+                                                                                                                                            <li><a href="#">westrn dress</a></li>
+                                                                                                                                            <li><a href="#">denim </a></li>
+                                                                                                                                    </ul>
+                                                                                                                            </li>
+                                                                                                                            <li class="main-mega"><a href="#">best selling <i class="fa fa-angle-right" aria-hidden="true"></i></a>
+                                                                                                                                    <ul class="mega-menu">
+                                                                                                                                            <li class="single-menu">
+                                                                                                                                                    <a href="#" class="title-link">Shop Kid's</a>
+                                                                                                                                                    <div class="image">
+                                                                                                                                                            <img src="images/mega-menu1.jpg" alt="#">
+                                                                                                                                                    </div>
+                                                                                                                                                    <div class="inner-link">
+                                                                                                                                                            <a href="#">Kids Toys</a>
+                                                                                                                                                            <a href="#">Kids Travel Car</a>
+                                                                                                                                                            <a href="#">Kids Color Shape</a>
+                                                                                                                                                            <a href="#">Kids Tent</a>
+                                                                                                                                                    </div>
+                                                                                                                                            </li>
+                                                                                                                                            <li class="single-menu">
+                                                                                                                                                    <a href="#" class="title-link">Shop Men's</a>
+                                                                                                                                                    <div class="image">
+                                                                                                                                                            <img src="images/mega-menu2.jpg" alt="#">
+                                                                                                                                                    </div>
+                                                                                                                                                    <div class="inner-link">
+                                                                                                                                                            <a href="#">Watch</a>
+                                                                                                                                                            <a href="#">T-shirt</a>
+                                                                                                                                                            <a href="#">Hoodies</a>
+                                                                                                                                                            <a href="#">Formal Pant</a>
+                                                                                                                                                    </div>
+                                                                                                                                            </li>
+                                                                                                                                            <li class="single-menu">
+                                                                                                                                                    <a href="#" class="title-link">Shop Women's</a>
+                                                                                                                                                    <div class="image">
+                                                                                                                                                            <img src="images/mega-menu3.jpg" alt="#">
+                                                                                                                                                    </div>
+                                                                                                                                                    <div class="inner-link">
+                                                                                                                                                            <a href="#">Ladies Shirt</a>
+                                                                                                                                                            <a href="#">Ladies Frog</a>
+                                                                                                                                                            <a href="#">Ladies Sun Glass</a>
+                                                                                                                                                            <a href="#">Ladies Watch</a>
+                                                                                                                                                    </div>
+                                                                                                                                            </li>
+                                                                                                                                    </ul>
+                                                                                                                            </li>
+                                                                                                                            <li><a href="#">accessories</a></li>
+                                                                                                                            <li><a href="#">top 100 offer</a></li>
+                                                                                                                            <li><a href="#">sunglass</a></li>
+                                                                                                                            <li><a href="#">watch</a></li>
+                                                                                                                            <li><a href="#">man’s product</a></li>
+                                                                                                                            <li><a href="#">ladies</a></li>
+                                                                                                                            <li><a href="#">westrn dress</a></li>
+                                                                                                                            <li><a href="#">denim </a></li>
+                                                                                                                            <li><a href="#">accessories</a></li>
+                                                                                                                            <li><a href="#">top 100 offer</a></li>
+                                                                                                                            <li><a href="#">sunglass</a></li>
+                                                                                                                            <li><a href="#">watch</a></li>
+                                                                                                                            <li><a href="#">man’s product</a></li>
+                                                                                                                            <li><a href="#">ladies</a></li>
+                                                                                                                            <li><a href="#">westrn dress</a></li>
+                                                                                                                            <li><a href="#">denim </a></li>
+                                                                                                                        </ul>
+															<li><a href="checkout.html">Categoria 2</a></li>
+														</ul>
+													</li>
+                                                                                                        <!-- class="active" -->
+                                                                                                        <li ><a href="#">Destaques</a></li>
+													<li><a href="#">Celulares</a></li>												
+													<li><a href="#">Móveis</a></li>
+													<li><a href="#">Eletrodomesticos</a>
 														<ul class="dropdown">
 															<li><a href="cart.html">Cart</a></li>
 															<li><a href="checkout.html">Checkout</a></li>
 														</ul>
 													</li>
-													<li><a href="#">Pages</a></li>									
-													<li><a href="#">Blog<i class="ti-angle-down"></i></a>
+													<li><a href="#">Notebooks</a></li>									
+													<li><a href="#">TV</a></li>									
+													<li><a href="#">Moda</a></li>									
+													<li><a href="#">Natal</a></li>									
+													<li><a href="#">Blog<i class="ti-angle-down"><span class="new">New</span></i></a>
 														<ul class="dropdown">
 															<li><a href="blog-single-sidebar.html">Blog Single Sidebar</a></li>
 														</ul>
 													</li>
-													<li><a href="contact.html">Contact Us</a></li>
 												</ul>
 										</div>
 									</div>
@@ -5120,7 +5199,8 @@ Version:1.0
 
 
 	<!-- ROUTING HERE-->
-
+        <!-- Body -->
+<router-outlet></router-outlet>
 
 
 
@@ -5209,7 +5289,7 @@ Version:1.0
 						</div>
 						<div class="col-lg-6 col-12">
 							<div class="right">
-								<img src="images/payments.png" alt="#">
+								<img src="https://i.ibb.co/mGYHP7w/payments.png" alt="#">
 							</div>
 						</div>
 					</div>
