--- a/src/app/components/views/Produtos/home-destaque-hoje/home-destaque-hoje.component.html
+++ b/src/app/components/views/Produtos/home-destaque-hoje/home-destaque-hoje.component.html
@@ -1,1 +1,54 @@
-<p>home-destaque-hoje works!</p>
+
+
+<div class="jj" style="margin-left: 5%; margin-right: 5%; margin-top: 20px;">
+    <h1 class="right ">Cooorre que é só hoje</h1>
+    <div class="left tempo">
+        <div class="container">
+  <div class="balloon white">
+    <div class="star-red"></div>
+  <div class="face">
+    <div class="eye"></div>
+    <div class="mouth happy"></div>
+  </div>
+  <div class="triangle"></div>
+  <div class="string"></div>
+</div>
+
+<div class="balloon red">
+  <div class="star"></div>
+  <div class="face">
+    <div class="eye"></div>
+    <div class="mouth happy"></div>
+  </div>
+  <div class="triangle"></div>
+  <div class="string"></div>
+</div>
+
+<div class="balloon blue">
+  <div class="star"></div>
+  <div class="face">
+    <div class="eye"></div>
+    <div class="mouth happy"></div>
+  </div>
+  <div class="triangle"></div>
+  <div class="string"></div>
+</div>
+  <div id="timer">
+    <div class="days"> 
+  <div class="numbers">{{hour}}</div>Horas</div> 
+<div class="hours">
+  <div class="numbers">{{minute}}</div>Min</div> 
+<div class="minutes"> 
+  <div class="numbers">{{second}}</div>Seg</div>
+  </div>
+        
+        
+        
+        
+    </div>
+    
+</div>
+    <hr style="clear:both;"/>
+    
+    
+
