--- a/src/app/components/views/Produtos/home/home.component.html
+++ b/src/app/components/views/Produtos/home/home.component.html
@@ -1,5 +1,11 @@
-<div class="shopping-cart section">
-    <div class="container">
-     <p>home works!</p>
-    </div>
-</div>
+  
+    <app-carousel-home></app-carousel-home>
+    
+    <app-home-destaque-hoje></app-home-destaque-hoje>
+      
+      
+      
+      
+      
+ 
+   
