--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5100,7 +5100,7 @@ Version:1.0
                                                                                                                                     </ul>
                                                                                                                             </li>
                                                                                                                             <li class="main-mega"><a href="#">best selling <i class="fa fa-angle-right" aria-hidden="true"></i></a>
-                                                                                                                                    <ul class="mega-menu">
+                                                                                                                                    <!-- <ul class="mega-menu">
                                                                                                                                             <li class="single-menu">
                                                                                                                                                     <a href="#" class="title-link">Shop Kid's</a>
                                                                                                                                                     <div class="image">
@@ -5137,7 +5137,7 @@ Version:1.0
                                                                                                                                                             <a href="#">Ladies Watch</a>
                                                                                                                                                     </div>
                                                                                                                                             </li>
-                                                                                                                                    </ul>
+                                                                                                                                    </ul> -->
                                                                                                                             </li>
                                                                                                                             <li><a href="#">accessories</a></li>
                                                                                                                             <li><a href="#">top 100 offer</a></li>
