--- a/src/app/components/views/Produtos/home-destaque/home-destaque.component.html
+++ b/src/app/components/views/Produtos/home-destaque/home-destaque.component.html
@@ -1,1 +1,26 @@
-<p>home-destaque works!</p>
+ <style type="text/css">
+ 	.jj .right{
+        font-family: system-ui;
+  color: #333;
+  text-align:left;float:left;
+  
+    }
+   .jj .left{
+        font-family: system-ui;
+  color: #F80032;
+  text-align:right;float:right;
+ 
+    }
+    .jj h1{    font-size: 41px;
+    text-transform: uppercase;
+    font-weight: bold;}
+    
+    .jj .tempo{    position: absolute;
+    right: 0%;
+        margin-top: -76px;}
+ </style>
+
+<div class="jj" style="margin-left: 5%; margin-right: 5%; margin-top: 20px; display: flex;">
+    <h1 class="right ">Melhores produtos</h1>
+   
+</div>
