--- a/src/app/components/views/Produtos/home/home.component.html
+++ b/src/app/components/views/Produtos/home/home.component.html
@@ -2,6 +2,14 @@
     <app-carousel-home></app-carousel-home>
     
     <app-home-destaque-hoje></app-home-destaque-hoje>
+
+    <app-home-destaque></app-home-destaque>
+
+    <app-home-slide-categorias></app-home-slide-categorias>
+
+    <app-home-destaque-topvisit></app-home-destaque-topvisit>
+
+    <app-home-newslleter></app-home-newslleter>
       
       
       
