--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4922,7 +4922,11 @@ Version:1.0
 					<div class="col-lg-2 col-md-2 col-12">
 						<!-- Logo -->
 						<div class="logo">
-							<a href="index.html"><img src="https://i.ibb.co/SV6SBsy/TUSALVVV.png" alt="logo"></a>
+							<a href="index.html"><img style="    height: 64px;
+    max-width: 100%;
+    margin-top: -19px;
+    margin-left: 50px;
+" src="https://i.ibb.co/YjcXKnQ/Untitled-1.png" alt="logo"></a>
 						</div>
 						<!--/ End Logo -->
 						<!-- Search Form -->
