--- a/src/app/components/views/Produtos/home-newslleter/home-newslleter.component.css
+++ b/src/app/components/views/Produtos/home-newslleter/home-newslleter.component.css
@@ -53,10 +53,10 @@
 	padding: 10px 30px;
 	position: relative;
 	top: 0;
-	background: #F7941D;
+	background: #0086FF;
 	color: #fff;
 	left: -4px;
-	border-radius: 0 30px 30px 0;
+	border-radius: 0 15px 15px 0;
 	font-size: 14px;
 	font-weight: 500;
 	text-transform: uppercase;
