--- a/src/app/components/views/Produtos/home-newslleter/home-newslleter.component.html
+++ b/src/app/components/views/Produtos/home-newslleter/home-newslleter.component.html
@@ -1,16 +1,15 @@
 <!-- Start Shop Newsletter  -->
-	<section class="shop-newsletter section">
+	<section class="shop-newsletter section" style="margin-bottom: 50px;">
 		<div class="container">
 			<div class="inner-top">
 				<div class="row">
 					<div class="col-lg-8 offset-lg-2 col-12">
 						<!-- Start Newsletter Inner -->
 						<div class="inner">
-							<h4>Newsletter</h4>
-							<p> Subscribe to our newsletter and get <span>10%</span> off your first purchase</p>
+							<p> quer ficar por dentro das <span>melhooores ofertas?</span>  então você tá no lugar certo! deixa seu e-mail aqui, a gente te conta 🙂 </p>
 							<form action="mail/mail.php" method="get" target="_blank" class="newsletter-inner">
-								<input name="EMAIL" placeholder="Your email address" required="" type="email">
-								<button class="btn">Subscribe</button>
+								<input name="EMAIL" placeholder="Seu endereço de email" required="" type="email">
+								<button class="btn">Inscrever-se</button>
 							</form>
 						</div>
 						<!-- End Newsletter Inner -->
