--- a/src/app/components/views/Produtos/home-slide-categorias/home-slide-categorias.component.html
+++ b/src/app/components/views/Produtos/home-slide-categorias/home-slide-categorias.component.html
@@ -1,1 +1,302 @@
-<p>home slide categoria</p>
+ <style type="text/css">
+ 	.jj .right{
+        font-family: system-ui;
+  color: #333;
+  text-align:left;float:left;
+  
+    }
+   .jj .left{
+        font-family: system-ui;
+  color: #F80032;
+  text-align:right;float:right;
+ 
+    }
+    .jj h1{    font-size: 41px;
+    text-transform: uppercase;
+    font-weight: bold;}
+    
+    .jj .tempo{    position: absolute;
+    right: 0%;
+        margin-top: -76px;}
+ </style>
+
+ <style>
+body {
+  background: #e2eaef;
+  font-family: "Open Sans", sans-serif;
+}
+h2 {
+  color: #000;
+  font-size: 26px;
+  font-weight: 300;
+  text-align: center;
+  text-transform: uppercase;
+  position: relative;
+  margin: 30px 0 60px;
+}
+h2::after {
+  content: "";
+  width: 100px;
+  position: absolute;
+  margin: 0 auto;
+  height: 4px;
+  border-radius: 1px;
+  background: #6CC947 ;
+  left: 0;
+  right: 0;
+  bottom: -20px;
+}
+.carousel {
+  margin: 50px auto;
+  padding: 0 70px;
+}
+.carousel .item {
+  color: #747d89;
+  min-height: 120px;
+  text-align: center;
+  overflow: hidden;
+}
+.carousel .thumb-wrapper {
+  
+  background: #fff;
+  text-align: center;
+  position: relative;
+}
+.carousel .item .img-box {
+  height: 120px;
+  margin-bottom: 20px;
+  width: 100%;
+  position: relative;
+}
+.carousel .item img { 
+  max-width: 100%;
+  max-height: 100%;
+  display: inline-block;
+  position: absolute;
+  bottom: 0;
+  margin: 0 auto;
+  left: 0;
+  right: 0;
+}
+.carousel .item h4 {
+  font-size: 18px;
+}
+.carousel .item h4, .carousel .item p, .carousel .item ul {
+  margin-bottom: 5px;
+}
+.carousel-control-prev, .carousel-control-next {
+  height: 44px;
+  width: 40px;
+  background: transparent ;  
+  margin: auto 0;
+  border-radius: 4px;
+  opacity: 0.8;
+}
+.carousel-control-prev:hover, .carousel-control-next:hover {
+  background: rgba(0,0,0,0.1);
+  opacity: 1;
+}
+.carousel-control-prev i, .carousel-control-next i {
+  font-size: 36px;
+  position: absolute;
+  top: 50%;
+  display: inline-block;
+  margin: -19px 0 0 0;
+  z-index: 5;
+  left: 0;
+  right: 0;
+  color: #333;
+  text-shadow: none;
+  font-weight: bold;
+}
+.carousel-control-prev i {
+  margin-left: -2px;
+}
+.carousel-control-next i {
+  margin-right: -4px;
+}   
+.carousel-indicators {
+	display: none;
+  bottom: -50px;
+}
+
+
+
+
+</style>
+
+
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Open+Sans">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+
+
+
+<!-- Slide PRoducts -->
+<div class="container-xl" style="    margin-bottom: -59px;
+    margin-top: -33px;">
+  <div class="row">
+    <div class="col-md-12">
+      <div id="myCarouse2" class="carousel slide" data-ride="carousel" data-interval="0">
+      <!-- Carousel indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarouse2" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarouse2" data-slide-to="1"></li>
+        <li data-target="#myCarouse2" data-slide-to="2"></li>
+      </ol>   
+      <!-- Wrapper for carousel items -->
+      <div class="carousel-inner">
+        <div class="item carousel-item active">
+          <div class="row">
+            <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/cv3cTMf/notebooks.png" alt="">                 
+                </div>           
+              </div>
+            </div>
+            <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/hmrXgf6/phone.png" alt="">                 
+                </div>           
+              </div>
+            </div> 
+           <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/Fw5vt8v/game.png" alt="">                 
+                </div>           
+              </div>
+            </div>              
+           <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/f4kX0NX/maquina-de-lavar.png" alt="">                 
+                </div>           
+              </div>
+            </div>
+            <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/CP7GLXF/moda.png" alt="">                 
+                </div>           
+              </div>
+            </div>
+            <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/kXL45QT/impressora.png" alt="">                 
+                </div>           
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="item carousel-item">
+          <div class="row">
+            <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/j3TbLcM/moveis.png" alt="">                 
+                </div>           
+              </div>
+            </div>
+            <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/6rKQspD/projetor.png" alt="">                 
+                </div>           
+              </div>
+            </div> 
+           <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/9vCyhdN/watch.png" alt="">                 
+                </div>           
+              </div>
+            </div>              
+           <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/ccXFd1K/aspirador.png" alt="">                 
+                </div>           
+              </div>
+            </div>
+            <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/dG7DSVg/beleza.png" alt="">                 
+                </div>           
+              </div>
+            </div>
+            <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/BqXJT3V/camera.png" alt="">                 
+                </div>           
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="item carousel-item">
+          <div class="row">
+            <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/mBYn1Rj/decora-o.png" alt="">                 
+                </div>           
+              </div>
+            </div>
+            <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/ccCM59j/earphone.png" alt="">                 
+                </div>           
+              </div>
+            </div> 
+           <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/j3smxF0/eletrodomesticos.png" alt="">                 
+                </div>           
+              </div>
+            </div>              
+           <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/HxZR8vs/escritorio.png" alt="">                 
+                </div>           
+              </div>
+            </div>
+            <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/0GfHdTL/esportes.png" alt="">                 
+                </div>           
+              </div>
+            </div>
+            <div class="col-sm-2">
+              <div class="thumb-wrapper">
+                <div class="img-box">
+                  <img src="https://i.ibb.co/cv3cTMf/notebooks.png" alt="">                 
+                </div>           
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Carousel controls -->
+      <a class="carousel-control-prev" href="#myCarouse2" data-slide="prev">
+        <i class="fa fa-angle-left"></i>
+      </a>
+      <a class="carousel-control-next" href="#myCarouse2" data-slide="next">
+        <i class="fa fa-angle-right"></i>
+      </a>
+    </div>
+    </div>
+  </div>
+</div>
+                               
